Fix contact section layout on mobile

--- a/Style.css
+++ b/Style.css
@@ -917,44 +917,12 @@ footer {
   }
 }
 
-
-
 @media (max-width: 768px) {
-  .blue-box-wrapper {
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    width: 100vw;
-    background-color: #101940;
+  body {
+    padding: 0 !important;
+    margin: 0 !important;
   }
 
-  .blue-box {
-    width: 100%;
-    max-width: 100%;
-    padding-left: 0;
-    padding-right: 0;
-    box-sizing: border-box;
-    background-color: #101940;
-  }
-}
-
-
-@media (max-width: 768px) {
-  .blue-box-full {
-    background-color: #101940;
-    width: 100vw;
-    max-width: 100vw;
-    margin-left: calc(-1 * (100vw - 100%) / 2);
-    margin-right: calc(-1 * (100vw - 100%) / 2);
-    padding-left: 0;
-    padding-right: 0;
-    box-sizing: border-box;
-  }
-}
-
-@media (max-width: 768px) {
   .full-width-wrapper {
     width: 100vw;
     position: relative;
@@ -969,9 +937,24 @@ footer {
     background-color: #101940;
     width: 100%;
     max-width: 100%;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 20px 0;
     box-sizing: border-box;
     color: white;
+    text-align: center;
+  }
+
+  .blue-box button {
+    background-color: #ffd600;
+    color: #101940;
+    padding: 12px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+
+  .blue-box button:hover {
+    background-color: #fff;
+    color: #101940;
   }
 }
